# scythe-quant

./: .gitignore  MANIFEST.in  README.md  README_CN.md  pyproject.toml  requirements.txt  run_scythe.py
config/: data.example.json  fubon.example.json  fugle_marketdata.example.json  portfolio_path.example.json  sinopac.example.json  trade_api.example.json  us_data.example.json
examples/: Tool.py  examples.ipynb
examples/log/: client.log.20250428  client.log.20250429  client.log.20250430  client.log.20250502  client.log.20250503  client.log.20250505  client.log.20250506  notify.log.20250428  notify.log.20250429  notify.log.20250430  notify.log.20250502  notify.log.20250503  notify.log.20250505  notify.log.20250506  program.log.20250428  program.log.20250429  program.log.20250430  program.log.20250502  program.log.20250503  program.log.20250505
notebooks/: test.ipynb
quantdev/: __init__.py  analysis.py  backtest.py  config.py  data.py  plot.py  portfolio_manager.py  trade.py  trade_new.py  us_data.py  utils.py  your_module.py
scythe/: __init__.py  analysis.py  config.py  data.py  plot.py  utils.py
scytheq/: __init__.py  analysis.py  backtest.py  data.py  data_public_info.py  data_us.py  plot.py  trade.py  trade_legacy.py  us_data.py  utils.py
