[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scythe"
version = "2.0.1"
description = "A Python package for quantitative research and trading in Taiwan stock market"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
maintainers = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["quantitative", "trading", "finance", "taiwan", "stock-market"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
requires-python = ">=3.10"
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "plotly>=5.0.0",
    "scipy>=1.9.0",
    "statsmodels>=0.13.0",
    "scikit-learn>=1.1.0",
    "joblib>=1.1.0",
    "pyarrow>=8.0.0",
    "tejapi",
    "IPython>=8.0.0",
    "numerize>=0.12",
    "fugle-trade-sdk",
    "sinopac-sdk",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.800",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/scythe"
Repository = "https://github.com/yourusername/scythe"
Documentation = "https://github.com/yourusername/scythe#readme"
"Bug Tracker" = "https://github.com/yourusername/scythe/issues"



[tool.setuptools.packages.find]
where = ["."]
include = ["scythe*"]

[tool.setuptools.package-data]
scythe = ["*.json", "*.yaml", "*.yml"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 